# language-c

./: .travis.yml  ChangeLog  ChangeLog.md  KNOWN_ISSUES  README  README.md  flake.nix  index.html  language-c.cabal  travis.yml
.github/workflows/: ci-tests.yml  ci.yml  haskell-ci.yml
examples/: ComputeSize.hs  Makefile  PrintTokens.hs  language-c-examples.cabal
scripts/: tokenlist.txt
src/Language/C/: Parser.hs  Pretty.hs
src/Language/C/Analysis/: AstAnalysis.hs  ConstEval.hs  DeclAnalysis.hs  DefTable.hs  Export.hs  MachineDescs.hs  SemError.hs  SemRep.hs  TravMonad.hs  TypeCheck.hs
src/Language/C/Data/: Error.hs  Ident.hs  InputStream.hs  Name.hs  Node.hs  Position.hs
src/Language/C/Parser/: Lexer.x  Parser.y  ParserMonad.hs  Tokens.hs
src/Language/C/Syntax/: AST.hs  Constants.hs  Ops.hs
src/Language/C/System/: GCC.hs
src/derive/: DeriveTest.hs.expect
test/: language-c-test.cabal
test/harness/: Makefile  run-harness.hs
test/harness/arm_float16/: Makefile  test.c  test.expect
test/harness/bug20160626_atomic/: test.c  test.expect
test/harness/iec_60559/: test.c  test.expect
test/harness/parse_dg/: expect_fail.txt  expect_parse.txt  gcc_dg_pre.tar.bz2
test/src/: RenderTests.hs
test/src/Language/C/Test/: Environment.hs  Framework.hs  ParseTests.hs  TestMonad.hs
