Cabal-Version:  3.8
Name:           language-c-test
Version:        0.6.0
Build-Type:     Simple
License:        BSD-3-Clause
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     benedikt.huber@gmail.com
Stability:      experimental
Homepage:       http://visq.github.io/language-c/
Bug-reports:    https://github.com/visq/language-c/issues/

Synopsis:       Test Framework - Analysis and generation of C code
Description:    Language C is a haskell library for the analysis and generation of C code.
Category:       Language

extra-source-files:
  harness/Makefile
  harness/**/Makefile
  harness/**/*.c
  harness/**/*.expect

tested-with:
    ghc ==9.12.1 ghc ==9.10.1 ghc ==9.8.2 ghc ==9.6.6 ghc ==9.4.8
    ghc ==9.2.8 ghc ==9.0.2 ghc ==8.10.7 ghc ==8.8.4 ghc ==8.6.5
    ghc ==8.4.4 ghc ==8.2.2 ghc ==8.0.2

Executable CEquiv
   main-is: src/CEquiv.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CParse
   main-is: src/CParse.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CTest
   main-is: src/CTest.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, syb, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CRoundTrip
   main-is: src/CRoundTrip.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CheckGccArgs
   main-is: src/CheckGccArgs.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable RenderTests
   main-is: src/RenderTests.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, containers, directory, xhtml < 4000, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable ReportFatal
   main-is: src/ReportFatal.hs
   default-language: Haskell2010
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Library
    default-language: Haskell2010
    Other-Extensions: CPP, DeriveDataTypeable, PatternGuards, BangPatterns, ExistentialQuantification, GeneralizedNewtypeDeriving, ScopedTypeVariables
    Build-Depends: base >= 3 && < 5, process < 2, directory < 2, array < 1, containers < 1, pretty < 2, filepath < 2, bytestring >= 0.9.0 && < 1, syb < 1, mtl < 3, language-c >= 0.5.1 && < 1
    Hs-Source-Dirs: src
    if impl(ghc >= 8.0)
      ghc-options:    -Wall -Wno-redundant-constraints
    else
      ghc-options:    -Wall
    Exposed-Modules:
                    Language.C.Test.Environment
                    Language.C.Test.Framework
                    Language.C.Test.GenericAST
                    Language.C.Test.Measures
                    Language.C.Test.ParseTests
                    Language.C.Test.TestMonad

-- test description
Test-Suite language-c-harness
    default-language: Haskell2010
    type:       exitcode-stdio-1.0
    main-is:    harness/run-harness.hs
    build-depends: base, language-c, directory, process, filepath, language-c-test
